[Testimonial] -Fixed responsive issue on mobile screen

--- a/src/Components/Testimonials/Testimonial.css
+++ b/src/Components/Testimonials/Testimonial.css
@@ -19,6 +19,9 @@
 }
 
 .testimonial-users {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   width: 390px;
   padding: 40px 70px 40px 40px;
   border: 1px solid #DEDEDE;
@@ -50,4 +53,15 @@
 .testimonial-describtion {
   font-family: var(--graphik);
   font-size: 16px;
+}
+
+@media screen and (max-width:768px) {
+  .testimonial-users {
+    width: 390px;
+    padding: 40px 30px 40px;
+    border: 1px solid #DEDEDE;
+    border-radius: 10px;
+    text-align: left;
+  }
+
 }
